--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "ngx-signal-plus": "^1.0.0-beta.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -46,6 +47,6 @@
     "typescript": "~5.6.2"
   },
   "engines": {
-    "node": "^18.13.0 || ^20.9.0 || ^22.0.0"
+    "node": ">=18.13.0"
   }
 }
