--- a/projects/signal-plus/package.json
+++ b/projects/signal-plus/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-signal-plus",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-beta.2",
   "description": "A comprehensive utility library for Angular Signals that provides enhanced functionality, operators, and utilities",
   "keywords": [
     "angular",
@@ -34,7 +34,7 @@
   },
   "sideEffects": false,
   "engines": {
-    "node": "^18.13.0 || ^20.9.0 || ^22.0.0"
+    "node": ">=18.13.0"
   },
   "publishConfig": {
     "access": "public",
