--- a/projects/signal-plus/package.json
+++ b/projects/signal-plus/package.json
@@ -39,5 +39,27 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
+  },
+  "exports": {
+    "./core": {
+      "types": "./lib/core/index.d.ts",
+      "esm": "./esm2022/projects/signal-plus/src/lib/core/index.js",
+      "default": "./fesm2022/ngx-signal-plus-core.js"
+    },
+    "./operators": {
+      "types": "./lib/operators/index.d.ts",
+      "esm": "./esm2022/projects/signal-plus/src/lib/operators/index.js",
+      "default": "./fesm2022/ngx-signal-plus-operators.js"
+    },
+    "./utils": {
+      "types": "./lib/utils/index.d.ts",
+      "esm": "./esm2022/projects/signal-plus/src/lib/utils/index.js",
+      "default": "./fesm2022/ngx-signal-plus-utils.js"
+    },
+    "./models": {
+      "types": "./lib/models/index.d.ts",
+      "esm": "./esm2022/projects/signal-plus/src/lib/models/index.js",
+      "default": "./fesm2022/ngx-signal-plus-models.js"
+    }
   }
 }
