--- a/projects/signal-plus/package.json
+++ b/projects/signal-plus/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-signal-plus",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.1",
   "description": "A comprehensive utility library for Angular Signals that provides enhanced functionality, operators, and utilities",
   "keywords": [
     "angular",
