chore(release): update ngx-signal-plus to version 1.0.1, enhance README, and improve package.json keywords

--- a/projects/signal-plus/package.json
+++ b/projects/signal-plus/package.json
@@ -5,9 +5,10 @@
   "keywords": [
     "angular",
     "signals",
+    "angular-signals",
+    "signal-state",
     "state management",
     "reactive",
-    "utilities",
     "operators",
     "persistence",
     "validation"
