--- a/projects/signal-plus/package.json
+++ b/projects/signal-plus/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-signal-plus",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "A comprehensive utility library for Angular Signals that provides enhanced functionality, operators, and utilities",
   "keywords": [
     "angular",
@@ -27,8 +27,8 @@
   },
   "homepage": "https://github.com/milad-hub/ngx-signal-plus#readme",
   "peerDependencies": {
-    "@angular/common": ">=16.0.0",
-    "@angular/core": ">=16.0.0"
+    "@angular/common": ">=16.0.0 <=21.0.0",
+    "@angular/core": ">=16.0.0 <=21.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
