chore: update CONTRIBUTING.md for improved development workflow, fix formatting in README.md, and ensure consistent code style across various files

--- a/projects/signal-plus/tsconfig.lib.json
+++ b/projects/signal-plus/tsconfig.lib.json
@@ -8,22 +8,13 @@
     "declarationMap": true,
     "inlineSources": true,
     "types": [],
-    "lib": [
-      "dom",
-      "es2022"
-    ]
+    "lib": ["dom", "es2022"]
   },
   "angularCompilerOptions": {
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
     "enableResourceInlining": true
   },
-  "exclude": [
-    "src/test.ts",
-    "src/**/*.spec.ts",
-    "src/test-setup.ts"
-  ],
-  "include": [
-    "src/**/*.ts"
-  ]
+  "exclude": ["src/test.ts", "src/**/*.spec.ts", "src/test-setup.ts"],
+  "include": ["src/**/*.ts"]
 }
