--- a/projects/signal-plus/tsconfig.spec.json
+++ b/projects/signal-plus/tsconfig.spec.json
@@ -4,14 +4,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/spec",
-    "types": [
-      "jasmine",
-      "node"
-    ]
+    "types": ["jasmine", "node"]
   },
-  "include": [
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts",
-    "src/test.ts"
-  ]
+  "include": ["src/**/*.spec.ts", "src/**/*.d.ts", "src/test.ts"]
 }
