docs: update package keywords, add changelog, and improve documentation
- Expand npm package keywords for better discoverability
- Add CHANGELOG.md with full version history following Keep a Changelog format
- Improve reactive query type documentation with examples and clarity
- Split repository README into contributor-facing and npm-facing versions
- Update npm README with badges, concise examples, and ecosystem comparisons

--- a/projects/signal-plus/package.json
+++ b/projects/signal-plus/package.json
@@ -5,13 +5,22 @@
   "keywords": [
     "angular",
     "signals",
+    "angular signals",
     "angular-signals",
+    "angular 16",
     "signal-state",
     "state management",
+    "angular state management",
     "reactive",
     "operators",
     "persistence",
-    "validation"
+    "validation",
+    "signal validation",
+    "signal persistence",
+    "undo redo angular",
+    "tanstack query angular",
+    "reactive queries",
+    "middleware"
   ],
   "author": {
     "name": "Milad",
